@@ -1,4 +1,5 @@
 1.0.5:
+- Change .plotComplexUpset to make the violin plot on top optional
 - add parameter includeenhancers to multiple methods and functions
 - In extractCompCoordWithPeak, add the boolean includeenhancers = FALSE as parameter
 - Modify the code of aslist to make enhancer inclusion optional
